Lineas de deploy5

--- a/src/app/calculadora/calculadora.component.html
+++ b/src/app/calculadora/calculadora.component.html
@@ -23,7 +23,7 @@
   </div>
 
   <div class="fila">
-    <button (click)="presionar('1')">1</button>
+    <button (click)="presionar('1')">j</button>
     <button (click)="presionar('2')">2</button>
     <button (click)="presionar('3')">3</button>
     <button class="igual" rowspan="2" (click)="presionar('=')">=</button>
