--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    background: #000; /* o el color que prefieras */
+  }
+  
+  app-root {
+    display: block;
+    height: 100%;
+  }
